updates to alignment on main nav, small fix

--- a/public/resources/css/module/_main-nav.scss
+++ b/public/resources/css/module/_main-nav.scss
@@ -22,10 +22,6 @@ $main-nav-height: $unit * 7;
   padding: 0px;
   box-shadow: 0px 2px 5px 0 rgba($black, 0.24);
 
-  @include respond-to('mobile') {
-    padding: 0px 0px 0px ($unit * 2);
-  }
-
   .feedback-button {
     margin-top: 10px;
   }
